@@ -3,6 +3,7 @@ UNRELEASED
   - Remove broken http.server `.client_timeout` option (replaced with `.connection_setup_timeout`)
   - Fix http1 pipelining locks
   - Fix sending http2 continuations
+  - HTTP 2 streams no longer have to be used in order of creation
 
 
 0.1 - 2016-12-17
